Fixes errors resulting from rebase, collapse/expanding now work

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -90,7 +90,7 @@ body {
   margin: .5em;
 }
 
-.rOutline-property p {
+.rOutline-property div {
   padding: .5em;
 }
 
